--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NODE_ENV=development
 
 # MongoDB Connection - Replace with your actual MongoDB URI
 MONGODB_URI=mongodb+srv://rghv064:kronos@cluster0.n2fva.mongodb.net/gdg-gug?retryWrites=true&w=majority&appName=Cluster0
+VITE_API_URL=https://gdg-gug-backend.onrender.com/api
